Correción de errores

--- a/antecedentes.html
+++ b/antecedentes.html
@@ -60,11 +60,11 @@
                   <a class="nav-link" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="antecedentes.html"> Antecedestes </a>
+                  <a class="nav-link" href="antecedentes.html"> Antecedentes </a>
                 </li>
 
                 <li class="nav-item ">
-                  <a class="nav-link" href="organisacion.html"> Organisacion </a>
+                  <a class="nav-link" href="organisacion.html"> Organización </a>
                 </li>
 
                 <li class="nav-item">
@@ -73,6 +73,7 @@
 
               </ul>
             </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -92,12 +93,12 @@
           </div>
           <div class="col-md-6">
             <div class="about_detail-box">
-              <h3>
-                Antecedestes
-              </h3>
               <h2>
-                Primera red
+                Antecedentes
               </h2>
+              <h3>
+                Primera red
+              </h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
