--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
                 </li>
 
                 <li class="nav-item ">
-                  <a class="nav-link" href="organisacion.html"> Organisación </a>
+                  <a class="nav-link" href="organisacion.html"> Organización </a>
                 </li>
 
                 <li class="nav-item">
@@ -82,34 +82,51 @@
   <div class="common_style">
 
     <!-- about section -->
-    <section class="about_section">
+    <section class="contact_section ">
+
       <div class="container">
+       
         <div class="row">
           <div class="col-md-6">
-            <div class="about_img-container">
-              <img src="images/Logo-sinF.png" alt="">
+            <div class="d-flex justify-content-center d-md-block">
+              <h2>
+                Contactanos
+              </h2>
             </div>
+            <form action="">
+              <div class="contact_form-container">
+                <div>
+                  <div>
+                    <input type="text" placeholder="Nombre">
+                  </div>
+                  <div>
+                    <input type="email" placeholder="Email">
+                  </div>
+                  <div>
+                    <input type="text" placeholder="Número de telefono">
+                  </div>
+                  <div class="mt-5">
+                    <input type="text" placeholder="Mensaje">
+                  </div>
+                  <div class="mt-5">
+                    <button type="Enviar">
+                      Enviar
+                    </button>
+                  </div>
+                </div>
+  
+              </div>
+  
+            </form>
           </div>
           <div class="col-md-6">
-            <div class="about_detail-box">
-              <h3>
-                Contacto
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              </p>
-              <div class="">
-                <a href="" class="call_to-btn btn_white-border">
-                  Read More
-                </a>
-              </div>
+            <div class="contact_img-box">
+              <img src="images/Logo-sinF.png" alt="">
             </div>
           </div>
         </div>
       </div>
-    </section>
+  </section>
 
 
     <!-- end about section -->
