--- a/organisacion.html
+++ b/organisacion.html
@@ -60,11 +60,11 @@
                   <a class="nav-link" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="antecedentes.html"> Antecedestes </a>
+                  <a class="nav-link" href="antecedentes.html"> Antecedentes </a>
                 </li>
 
                 <li class="nav-item ">
-                  <a class="nav-link" href="organisacion.html"> Organisación </a>
+                  <a class="nav-link" href="organisacion.html"> Organización </a>
                 </li>
 
                 <li class="nav-item">
@@ -73,6 +73,7 @@
 
               </ul>
             </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -94,7 +95,7 @@
           <div class="col-md-6">
             <div class="about_detail-box">
               <h3>
-                Organisación
+                Organización
               </h3>
               <div class="">
                 <!--
